# aoc2022

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
input/: input_day7_simple.txt
src/: main.rs
